--- a/package.json
+++ b/package.json
@@ -4,21 +4,36 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "dev:watch": "ts-node-dev --respawn src/index.ts",
+    "prepare": "webpack --config webpack.prod.js",
+    "watch": "webpack --config webpack.dev.js --watch",
     "clean": "rimraf dist/*",
-    "tsc": "tsc",
-    "build": "npm-run-all clean tsc",
-    "start": "node ."
+    "webpack": "webpack",
+    "build": "npm-run-all clean webpack",
+    "start": "node .",
+    "lint": "eslint src/index.ts",
+    "lint:fix": "eslint --fix src/index.ts"
   },
   "author": "Ryoichi Izumita",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.10",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "catacli": "^0.1.3",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "ts-loader": "^8.0.11",
     "ts-node": "^9.1.0",
     "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "webpack": "^5.9.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-merge": "^5.4.0"
+  },
+  "bin": {
+    "ptarmigan": "./bin/ptarmigan.js"
   }
 }
