--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,8 @@
-{}
+{
+    "printWidth": 120,
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "parser": "typescript"
+}
