--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
     "build": "npm-run-all clean webpack",
     "start": "node .",
     "lint": "eslint src/index.ts",
-    "lint:fix": "eslint --fix src/index.ts"
+    "lint:fix": "eslint --fix src/index.ts",
+    "test": "jest"
   },
   "author": "Ryoichi Izumita",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "catacli": "^0.1.3",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
+    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
     "ts-node": "^9.1.0",
     "ts-node-dev": "^1.0.0",
