--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "jest": "^26.6.3",
+    "node-loader": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
@@ -35,7 +36,8 @@
     "typescript": "^4.1.2",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
-    "webpack-merge": "^5.4.0"
+    "webpack-merge": "^5.4.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "bin": {
     "ptarmigan": "./bin/ptarmigan.js"
@@ -44,6 +46,7 @@
     "@types/faker": "^5.1.5",
     "@types/oniguruma": "^7.0.1",
     "firebase-admin": "^9.4.1",
+    "node-fetch": "^2.6.1",
     "oniguruma": "^7.2.1"
   }
 }
