--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "es5",
-    "parser": "typescript"
+    "parser": "typescript",
+    "arrowParens": "avoid"
 }
