--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "catacli": "^0.1.3",
-    "eslint": "^7.14.0",
+    "eslint": "^7.15.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
     "node-loader": "^1.0.2",
     "npm-run-all": "^4.1.5",
@@ -44,9 +45,8 @@
   },
   "dependencies": {
     "@types/faker": "^5.1.5",
-    "@types/oniguruma": "^7.0.1",
+    "faker": "^5.1.0",
     "firebase-admin": "^9.4.1",
-    "node-fetch": "^2.6.1",
-    "oniguruma": "^7.2.1"
+    "node-fetch": "^2.6.1"
   }
 }
